# spbu-courses

./: README.md
2-courses/databases/pets/: main.py  (+4 more)
2-courses/proga/roguelike/: .gitignore  .gitmodules  0001-changes.patch  CMakeLists.txt  README.md  main.cpp  save.cpp  scene.txt
2-courses/proga/roguelike/.old_git_history/: config  index  packed-refs
2-courses/proga/roguelike/.old_git_history/logs/: HEAD
2-courses/proga/roguelike/.old_git_history/modules/OBJ-Loader/: HEAD  config  index  packed-refs
2-courses/proga/roguelike/.old_git_history/objects/pack/: pack-3806e5996472ef6863032cec54f7ae60a49af21d.idx  pack-3806e5996472ef6863032cec54f7ae60a49af21d.rev
2-courses/proga/roguelike/.old_git_history/refs/heads/: master
2-courses/proga/roguelike/OBJ-Loader/Source/: OBJ_Loader.h
2-courses/proga/roguelike/application/: CMakeLists.txt  application.cpp  application.hpp  debug_output.cpp
2-courses/proga/roguelike/datasets/models/box/: box.mtl
2-courses/proga/roguelike/datasets/models/monach/: Man.mtl
2-courses/proga/roguelike/datasets/shaders/default/: frag.glsl  vert.glsl
2-courses/proga/roguelike/model/: CMakeLists.txt  model.cpp  model.h  model_data.cpp  topology.cpp
2-courses/proga/roguelike/scene/: CMakeLists.txt  player.cpp  player.h  scene.cpp  scene.h
2-courses/proga/roguelike/scene/inventory/: CMakeLists.txt  inventory.cpp  inventory.h
2-courses/proga/roguelike/scene/things/: CMakeLists.txt  thing.cpp  thing.h
2-courses/proga/roguelike/scene/units/: CMakeLists.txt  base_unit.cpp  base_unit.hpp  field.hpp  game_objs.cpp  game_objs.hpp
(+83 files in other folders)
